# example-telegram-bot

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  justfile  remappings.txt
component/: Cargo.toml
component/src/: bindings.rs  lib.rs
components/commit/: Cargo.toml
components/commit/src/: lib.rs  telegram.rs
components/prepare/: Cargo.toml
components/prepare/src/: bindings.rs  lib.rs
config/: cli.toml  wavs.toml
justfiles/: backend.just  build.just  clean.just  deploy.just  service.js  transfer.just  vars.just
solidity/contracts/: MyContract.sol  package-lock.json
solidity/layer/interfaces/: ILayerServiceAggregator.sol  ILayerServiceManager.sol
solidity/scripts/: Deploy.s.sol  Transfer.s.sol
