[workspace]
members = [
  "component",
]
resolver = "2"


[workspace.package]
edition = "2021"
version = "0.2.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
rust-version = "1.81.0"
repository = "https://github.com/Lay3rLabs/cosmos-eth-bridge"
description = "Layer AVS Cosmos -> Eth Bridge Example"

[workspace.dependencies]
# WASI
wasi = "0.13.3"
wit-bindgen = "0.38.0"
wit-bindgen-rt = "0.38.0"
wstd = "0.4.0"

# Async
tokio = {version = "1.43.0", features = ["full"]}
async-trait = "0.1.85"

# Error handling
anyhow = "1.0.95"

# Ethereum
alloy = {version = "0.9.2", features = ["full"]}

# Logging
tracing-subscriber = {version ="0.3.19", features = ["env-filter"]}
tracing = "0.1.41"

# Networking
reqwest = {version = "0.12.12", features=["json"]}

# Data formats
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
hex = "0.4.3"
toml = "0.8.19"

# Misc
cfg-if = "1.0.0"