[package]
name = "prepare"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {workspace = true} 
wit-bindgen-rt = {workspace = true}
alloy-sol-macro = {workspace = true}
alloy-sol-types = {workspace = true}
alloy-primitives = {workspace = true}
wasi = {workspace = true}
layer-wasi = {workspace = true}
const-hex = {workspace = true}

[package.metadata.component]
package = "component:prepare"

[package.metadata.component.target]
world = "layer-trigger-world"