[package]
name = "prepare"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {workspace = true} 
wit-bindgen-rt = {workspace = true}
alloy-sol-macro = {workspace = true}
alloy-sol-types = {workspace = true}
alloy-primitives = {workspace = true}
wasi = {workspace = true}
wavs-wasi-chain = {workspace = true}
const-hex = {workspace = true}

[package.metadata.component]
package = "wavs:telegram-bot-prepare"
target = "wavs:worker/layer-trigger-world@0.3.0-alpha2"